# web-app-languages-benchmarks

./: .gitignore  License.md  README.md
ConcurrentDispatchThroughput/: avg_time_16_8.txt  avg_time_1_8.txt  avg_time_24_8.txt  avg_time_2_8.txt  avg_time_32_8.txt  avg_time_4_8.txt  avg_time_64_8.txt  avg_time_8_8.txt
ConcurrentDispatchThroughput/erlang/: dispatcher.erl  dispath.erl
ConcurrentDispatchThroughput/rust/dispatcher/: Cargo.toml  kill_receivers.sh  start_receivers.sh  test.sh
ConcurrentDispatchThroughput/rust/dispatcher/src/: client.rs  connector.rs  dispatcher.rs  generator.rs  lib.rs  main.rs  receiver.rs  server.rs
ConcurrentDispatchThroughput/rust/tcp_server/: Cargo.toml  Settings.toml
ConcurrentDispatchThroughput/rust/tcp_server/src/: main.rs  server.rs
ConcurrentProcessesThroughput/: cpt_erl.txt  cpt_go.txt  cpt_go_1.7.1.txt  cpt_rust.txt  cpt_rust_with_tokio.txt  cpt_scala.txt  test.sh
ConcurrentProcessesThroughput/erlang/: maxSpeakers.erl  test.sh
ConcurrentProcessesThroughput/go/: maxSpeakers.go  test.sh
ConcurrentProcessesThroughput/rust/: Cargo.toml
ConcurrentProcessesThroughput/rust_with_tokio/: Cargo.toml
ConcurrentProcessesThroughput/scala/: build.sbt  maxSpeakers.scala  test.sh
ProcessCommunicationLatency/: pct_erl.txt  pct_erl_hibernate.txt  pct_go.txt  pct_go_1.7.1.txt  pct_rust_with_tokio.txt  pct_scala.txt  test.sh
ProcessCommunicationLatency/erlang/: pingping.erl  test.sh
ProcessCommunicationLatency/go/: pingping.go  test.sh
ProcessCommunicationLatency/rust/: Cargo.toml
ProcessCommunicationLatency/rust_with_tokio/: Cargo.toml  test.sh
ProcessCreationLatency/: pcl_erl.txt  pcl_go.txt  pcl_go_1.7.1.txt  pcl_rust.txt  pcl_rust_with_tokio.txt  pcl_scala.txt  test.sh
ProcessCreationLatency/rust_with_tokio/: Cargo.toml
ProcessCreationLatency/rust_with_tokio/src/: main.rs
(+31 files in other folders)
