[package]
name = "rust_with_tokio"
version = "0.1.0"
authors = ["Lang Yuan <peacocker@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full", "tracing"] }
tracing = "0.1"
